feat(api/open): add user_groups and department_groups
